--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=medexpress-consultation
+
+## placeholders for demonstration purposes
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=joshwaterson
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
