add date to oas3

--- a/spec.yaml
+++ b/spec.yaml
@@ -90,4 +90,6 @@ components:
           type: "string"
         prospectivePatientName:
           type: "string"
-  
+        timeSubmitted:
+          type: "string"
+          format: "date-time"
